--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -706,7 +706,8 @@ h4 {
   border: none;
   padding: 0;
   margin: 0;
-  transition: all .2s linear; }
+  transition: all .2s linear;
+  height: 45px; }
 
 .toolbar .btn:hover {
   background: rgba(255, 255, 255, 0.1);
@@ -734,20 +735,19 @@ h4 {
 .toolbar .icn-circle {
   border-radius: 50%; }
 
-.btn-toggle-play {
-  font-size: 30px !important; }
-
 /* ACTIVITIES CHART */
 svg {
   padding: 0;
   margin: 0; }
 
 .timeline {
+  /* The 1px margin enables the mouseleave events if the 
+	   control is positioned at the edges of the window. */
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; }
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 1px; }
 
 .timeline .track-col {
   position: absolute;
