--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -37,6 +37,7 @@ $windowBackgroundColor: #202020;
 $headerBackgroundColor: #303030;
 $headerTextColor: $textColor;
 $headerHeight: 45px;
+$toolbarHeight: 45px;
 $toolbarBackgroundColor: $headerBackgroundColor;
 $toolbarTextColor: $headerTextColor;
 $overlayTextColor: $textColor;
@@ -873,7 +874,7 @@ h4 {
 	transition-duration: 1s;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
 	position: relative;
-	height: 45px;
+	height: $toolbarHeight;
 	padding: 0;
 	margin: 0;
 }
@@ -904,6 +905,7 @@ h4 {
 	padding: 0;
 	margin: 0;
 	transition: all .2s linear;
+	height: $toolbarHeight;
 }
 
 .toolbar .btn:hover {
@@ -937,11 +939,6 @@ h4 {
 	border-radius: 50%;
 }
 
-.btn-toggle-play {
-	font-size: 30px !important;
-}
-
-
 /* ACTIVITIES CHART */
 
 svg {
@@ -950,11 +947,13 @@ svg {
 }
 
 .timeline {
+	/* The 1px margin enables the mouseleave events if the 
+	   control is positioned at the edges of the window. */
 	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	top: 1px;
+	left: 1px;
+	right: 1px;
+	bottom: 1px;
 }
 
 .timeline .track-col {
