Added IFFEs to controllers, filters and directives. Added selectionChanging event to selection service. Implemented rendering event in file controller root scope.

--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -2098,3 +2098,5 @@ iframe {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+
+/*# sourceMappingURL=style.css.map */
