Bugfix: Wrong initial toolbar height in file view.

--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-playback-control.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-playback-control.html
@@ -1,4 +1,4 @@
-<div class="toolbar" style="height: 100%;">
+<div class="toolbar">
     <div class="col">
         <a class="btn btn-skip-prev" ng-click="t.skipPrev()"><i class="zmdi zmdi-skip-previous"></i></a>
     </div>
