Bugfix: Removed padding from iframe in update dialog.

--- a/Artivity.Apid.Modules.Journal/app/partials/dialogs/update-dialog.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/dialogs/update-dialog.html
@@ -7,7 +7,7 @@
 </div>
 <div class="row">
 	<div class="col-xs-12">
-		<iframe ng-src="{{t.update.releaseNotesUrl}}" style="background: white; min-height: 400px; width: 100%; padding: 25px;"></iframe>
+		<iframe ng-src="{{t.update.releaseNotesUrl}}" style="background: white; min-height: 400px; width: 100%; padding: 0;"></iframe>
 	</div>
 </div>
 <div ng-show="t.progress">
