--- a/Artivity.Apid.Modules.Journal/app/css/style.css
+++ b/Artivity.Apid.Modules.Journal/app/css/style.css
@@ -1,10 +1,3 @@
-/*
-https://coolors.co/17bebb-ffc914-fb5f1a-2e282a-76b041
-https://coolors.co/17bebb-ffc914-fb5f1a-D62828-76b041
-https://coolors.co/76b041-087E8B-e57c04-fb5f1a-d62828
-https://coolors.co/087e8b-e57c04-fb5f1a-d62828-5e2f63
-https://coolors.co/0baabc-e57c04-fb5f1a-d62828-7b3d82
-*/
 /* GENERAL STYLES */
 html,
 body {
@@ -24,7 +17,7 @@ h3 {
 
 h3,
 h4 {
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 h1 .zmdi,
 h2 .zmdi {
@@ -146,7 +139,7 @@ input.disabled,
   border: none !important;
   border-radius: 0;
   background: #303030;
-  color: #bdbdbd;
+  color: #b0b0b0;
   padding: 7px 10px;
   margin: 0 10px 0 0;
   outline: none;
@@ -200,7 +193,7 @@ button:focus,
 
 .btn-chromeless {
   background: transparent;
-  color: #bdbdbd !important;
+  color: #b0b0b0 !important;
   transition: color linear .2s; }
 
 .btn-chromeless:hover {
@@ -234,7 +227,7 @@ button:focus,
   line-height: 45px;
   vertical-align: middle;
   background: none;
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 .btn-header.btn-text {
   padding: 0 15px !important; }
@@ -268,7 +261,7 @@ button:focus,
   border-radius: 0;
   border: none;
   border-bottom: 3px solid transparent;
-  color: #bdbdbd;
+  color: #b0b0b0;
   text-transform: uppercase;
   transition: all .1s linear;
   padding: .6em 1em; }
@@ -283,7 +276,7 @@ button:focus,
 .nav-tabs.nav-tabs-top li.active a,
 .nav-tabs.nav-tabs-top li.active a:hover {
   border: none;
-  border-top: 2px solid #F87806;
+  border-top: 2px solid #F0F0F0;
   color: #F0F0F0; }
 
 .nav-tabs li a:hover {
@@ -344,7 +337,7 @@ button:focus,
 .list-item .col h5 {
   margin-top: 6px;
   margin-bottom: 6px;
-  color: #e3e3e3;
+  color: #d7d7d7;
   font-size: 15px; }
 
 .list-item .col label {
@@ -376,11 +369,11 @@ button:focus,
 
 .list-item .col button {
   background: transparent;
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 .label,
 .text-label {
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 .icn {
   width: 20px;
@@ -442,7 +435,7 @@ h4 {
 
 .header {
   background: #303030;
-  color: #d7d7d7 !important;
+  color: #cacaca !important;
   padding: 3em 0; }
 
 .header .header-border-container {
@@ -779,7 +772,7 @@ svg {
 .timeline .track-preview {
   width: 0px;
   height: 4px;
-  background: #bdbdbd;
+  background: #b0b0b0;
   z-index: 5;
   transform: translateY(-1px); }
 
@@ -986,7 +979,7 @@ svg {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  color: #d7d7d7; }
+  color: #cacaca; }
 
 .card .file-extension {
   z-index: 100;
@@ -1016,14 +1009,14 @@ fieldset {
 fieldset h4 {
   padding: 0;
   margin-top: 0;
-  color: #bdbdbd;
+  color: #b0b0b0;
   border: none; }
 
 label,
 p.description,
 p.subtitle {
   font-weight: 400;
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 p.subtitle {
   margin-top: 1em; }
@@ -1289,7 +1282,7 @@ button[disabled]:hover {
   border-radius: 0 !important; }
 
 .bootstrap-switch-handle-off {
-  background: #bdbdbd !important;
+  background: #b0b0b0 !important;
   color: #202020 !important;
   border-radius: 0 !important; }
 
@@ -1318,7 +1311,7 @@ button[disabled]:hover {
 
 .nav-pills > li > a {
   position: relative;
-  color: #bdbdbd;
+  color: #b0b0b0;
   background: transparent;
   margin: 0;
   padding: 5px;
@@ -1333,13 +1326,13 @@ button[disabled]:hover {
 
 .nav-pills > li.active > a {
   background: transparent;
-  border-bottom: 2px solid #F87806;
-  color: #F87806; }
+  border-bottom: 2px solid #F0F0F0;
+  color: #F0F0F0; }
 
 .nav-pills > li > a:hover,
 .nav-pills > li.active > a:hover {
   cursor: pointer;
-  color: #F87806;
+  color: #F0F0F0;
   background: transparent;
   border-radius: 0;
   transition: background linear .2s; }
@@ -1421,7 +1414,7 @@ button[disabled]:hover {
   margin-right: 1px; }
 
 .lst-activities li {
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 .lst-activities li a {
   cursor: pointer;
@@ -1667,7 +1660,7 @@ path.color1 {
   fill: #F0F0F0 !important; }
 
 .yasgui .yasr .sortIcons svg path {
-  fill: #bdbdbd !important; }
+  fill: #b0b0b0 !important; }
 
 .yasgui .yasr .yasr_results {
   margin: 0; }
@@ -1690,7 +1683,7 @@ path.color1 {
   padding: 7px; }
 
 .yasgui .yasr .dataTables_wrapper .dataTables_info {
-  color: #bdbdbd !important;
+  color: #b0b0b0 !important;
   border: none !important;
   margin: 0; }
 
@@ -1701,7 +1694,7 @@ path.color1 {
   background: #303030 !important;
   border-left: 1px solid #202020;
   border-right: none;
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 .yasgui .yasr table.dataTable tbody td {
   padding: 5px 10px;
@@ -1729,7 +1722,7 @@ path.color1 {
   color: #F0F0F0; }
 
 .yasgui .yasr sup {
-  color: #bdbdbd; }
+  color: #b0b0b0; }
 
 .openGchartBtn {
   position: relative;
@@ -1813,7 +1806,7 @@ path.color1 {
   animation: load2 2s infinite ease 1.5s; }
 
 .spinner.loading {
-  color: #bdbdbd;
+  color: #b0b0b0;
   font-size: 5px;
   text-indent: -99999em;
   margin: 55px auto;
@@ -1961,7 +1954,7 @@ iframe {
   width: 100%;
   z-index: -1;
   text-align: center;
-  color: #bdbdbd;
+  color: #b0b0b0;
   line-height: 30px;
   vertical-align: middle; }
 
@@ -2098,3 +2091,5 @@ iframe {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+
+/*# sourceMappingURL=style.css.map */
