--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -37,9 +37,14 @@ $buttonTextColor: $headerTextColor;
 $inputBackgroundColor: #FFFFFF;
 $inputTextColor: #000000;
 $windowTitlebarHeight: 30px;
-$scrollbarSize: 16px;
+$scrollbarSize: 12px;
 $tooltipBackgroundColor: #EEEEEE;
 $tooltipTextColor: black;
+$editorBackgroundColor: #efefef;
+$editorContentColor: white;
+$editorTextColor: #202020;
+$editorLabelColor: lighten($editorTextColor, 25%);
+$editorBorderColor: darken($editorBackgroundColor, 25%);
 
 /* GENERAL STYLES */
 
@@ -1942,20 +1947,26 @@ path.color1 {
 
 #editor {
 	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	width: 100%;
+	height: 100%;
+	background: $editorBackgroundColor;
+}
+
+#editor .yasgui,
+#editor .yasgui .tabpanel,
+#editor .yasgui .tabpanel .tab-content,
+#editor .yasgui .tabpanel .tab-content .wrapper {
+	height: 100%;
 }
 
 .yasgui {
-	background: none;
 	font-family: 'Roboto';
+	background: $editorBackgroundColor;
 }
 
-.yasgui .nav-tabs {}
+.yasgui .nav-tabs {
+	border-bottom: none !important;
+}
 
 .yasgui .nav-tabs .active {
 	color: $accentTextColor;
@@ -1973,10 +1984,24 @@ path.color1 {
 	text-align: center;
 }
 
+.yasgui button:hover {
+	color: $accentColor;
+}
+
+.yasgui button[disabled] {
+	background: $editorContentColor !important;
+	color: $editorTextColor;
+	opacity: .6;
+}
+
+.yasgui .nav-tabs button:hover,
+.yasgui .nav-tabs li a:hover {
+	color: $editorTextColor !important;
+}
+
 .yasgui .controlbar {
 	display: none;
 	border-left: none;
-	background: $headerBackgroundColor;
 }
 
 .yasgui .tab-content {
@@ -1986,7 +2011,12 @@ path.color1 {
 
 .yasgui .CodeMirror {
 	border: none !important;
-	border-bottom: 4px solid $windowBackgroundColor;
+	border-bottom: 4px transparent;
+	border-top: none;
+}
+
+.yasgui .CodeMirror-cursors {
+	color: $editorContentColor !important;
 }
 
 .yasgui .CodeMirror-gutters {
@@ -2003,55 +2033,76 @@ path.color1 {
 	left: -7px;
 }
 
+.yasgui .yasqe .yasqe_buttons > .yasqe_share,
+.yasgui .yasqe .yasqe_buttons > .fullscreenToggleBtns {
+	margin-top: 12px;
+}
+
 .yasqe_queryButton.query_valid .btn {
-	float: left;
-	font-size: 30px;
+	font-size: 26px;
 	line-height: 30px;
-	border-radius: 50%;
-	margin: 11px 20px 0 0;
-	padding: 10px 8px 10px 12px;
-	width: 45px;
-	height: 45px;
+	border-radius: 0;
+	width: 40px;
+	height: 40px;
 	background: $accentColor;
-	color: white;
+	color: $editorContentColor;
+}
+
+.yasqe_queryButton.query_valid .btn:hover {
+	background: lighten($accentColor, 10%);
+}
+
+.yasqe_queryButton.query_valid svg path {
+	fill: $accentColor !important;
 }
 
 .yasgui .yasr {
-	background-color: $windowBackgroundColor;
-}
-
-.yasgui .yasr .yasr_header {
-	position: relative;
-	top: -10px;
+	font-family: $textFont !important;
+	background-color: $editorBackgroundColor;
 }
 
 .yasgui .yasr .yasr_btn {
-	border: 1px solid $windowBackgroundColor;
-	background: $buttonBackgroundColor;
-	color: $buttonTextColor;
+	border-radius: 0;
+	border: 1px solid $editorBackgroundColor;
+	background: $editorContentColor;
+	color: $editorTextColor;
+}
+
+.yasgui .yasr .yasr_btn.btn_icn {
+	color: $editorTextColor !important;
 }
 
 .yasgui .yasr .yasr_btn:hover {
-	border: 1px solid $windowBackgroundColor;
-	background: $buttonHoverBackgroundColor;
-	color: $buttonTextColor;
+	border: 1px solid $editorBackgroundColor;
+	background: $editorContentColor;
+	color: $accentColor !important;
 }
 
 .yasgui .yasr .yasr_btn.selected {
-	background: #F94C00;
-	border: 1px solid $windowBackgroundColor;
+	background: $accentColor;
+	border: 1px solid $editorBackgroundColor;
+}
+
+.yasgui .yasr .yasr_btn.disabled:hover {
+	color: $editorTextColor !important;
+}
+
+.yasgui .yasr .yasr_btn.selected:hover {
+	color: $accentTextColor !important;
 }
 
 .yasgui .yasr .yasr_btn svg path {
-	fill: $buttonTextColor !important;
+	fill: $editorTextColor !important;
 }
 
 .yasgui .yasr .sortIcons svg path {
-	fill: $labelTextColor !important;
+	fill: $editorTextColor !important;
 }
 
 .yasgui .yasr .yasr_results {
-	margin: 0;
+	margin: 7px;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .yasgui .yasr .btn_smallscreen,
@@ -2064,8 +2115,10 @@ path.color1 {
 	border: none;
 }
 
-.yasgui .yasr label {
+.yasgui .yasr label,
+.yasgui .yasr .dataTables_wrapper .dataTables_info {
 	font-weight: normal;
+	color: $editorLabelColor;
 }
 
 .yasgui .yasr .dataTables_wrapper .dtTopHeader {
@@ -2073,51 +2126,48 @@ path.color1 {
 }
 
 .yasgui .yasr .dataTables_wrapper .dataTables_info {
-	padding: 7px;
-}
-
-.yasgui .yasr .dataTables_wrapper .dataTables_info {
-	color: $labelTextColor !important;
 	border: none !important;
 	margin: 0;
+	padding: 7px;
 }
 
 .yasgui .yasr table.dataTable {
 	border: none;
+	border-collapse: collapse;
 }
 
 .yasgui .yasr table.dataTable thead th {
-	background: $headerBackgroundColor !important;
-	border-left: 1px solid $windowBackgroundColor;
+	background: $editorContentColor !important;
 	border-right: none;
-	color: $labelTextColor;
+	border-left: 1px solid $editorBackgroundColor;
+	border-bottom: 1px solid $editorBackgroundColor;
+	color: $editorLabelColor;
 }
 
 .yasgui .yasr table.dataTable tbody td {
 	padding: 5px 10px;
 	font-family: 'Roboto';
-	background: $headerBackgroundColor;
-	border-left: 1px solid $windowBackgroundColor;
-	border-bottom: 1px solid $windowBackgroundColor;
+	background: $editorContentColor;
+	border-left: 1px solid $editorBackgroundColor;
+	border-bottom: 1px solid $editorBackgroundColor;
 }
 
 .yasgui .yasr table.dataTable tbody tr td:first-child {
 	text-align: center;
-	color: #999;
+	color: $editorTextColor;
 }
 
 .yasgui .yasr .CodeMirror {
-	background: $headerBackgroundColor;
-	color: $headerTextColor;
+	background: $editorContentColor;
+	margin: 0 !important;
 }
 
 .yasgui .yasr .yasr_header {
 	padding-bottom: 5px;
 }
 
-.yasgui .yasr table.dataTable tbody tr td a,
-.yasgui .yasr .CodeMirror .cm-string {
-	color: #00ceff;
+.yasgui .yasr table.dataTable tbody tr td a {
+	color: $editorTextColor;
 }
 
 .yasgui .yasr .nonUri {
@@ -2134,6 +2184,25 @@ path.color1 {
 	top: -45px !important;
 }
 
+.yasgui ::-webkit-scrollbar {
+	width: $scrollbarSize;
+	/* for vertical scrollbars */
+	height: $scrollbarSize;
+	/* for horizontal scrollbars */
+}
+
+.yasgui ::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+.yasgui ::-webkit-scrollbar-thumb {
+	background: $editorLabelColor;
+	border: 2px solid $editorBackgroundColor;
+}
+
+.yasgui ::-webkit-scrollbar-thumb:hover {
+	background: lighten($editorLabelColor, 10%);
+}
 
 /* CONNECTION SPINNER */
 
