--- a/Artivity.Apid.Modules.Journal/app/partials/query.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/query.html
@@ -1,15 +1,5 @@
 <div class="layout-root table-layout">
-	<div class="row">
-		<div class="toolbar">
-			<div class="col">
-				<a class="btn btn-header" href="#/files"><i class="zmdi zmdi-chevron-left"></i></a>
-			</div>
-			<div class="col expand">
-				<h5 class="title">SPARQL Query</h5>
-			</div>
-		</div>
-	</div>
-	<div class="row expand">
-		<div id="editor"></div>
+	<div class="row expand" id="content">
+		<art-query-editor></art-query-editor>
 	</div>
 </div>
