--- a/Artivity.Apid.Modules.Journal/app/partials/directives/art-file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/directives/art-file-list.html
@@ -1,8 +1,12 @@
 <div ng-switch on="t.files.length > 0">
     <div ng-switch-when="true">
         <ul id="file-list" class="cards">
-            <li ng-repeat="file in t.files">
-                <div art-file-card file="{{file}}"></div>
+            <li ng-repeat="file in t.files" >
+                <div art-file-card file="{{file}}" 
+                data-drag="true"
+                ng-model="file" 
+                jqyoui-draggable 
+                data-jqyoui-options="{opacity:0.7,helper:'clone',appendTo: 'body', placeholder:'keep'}" ></div>
             </li>
         </ul>
     </div>
